# miolingo-fast

./: .env.DIST  .env.test  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  tox.ini
alembic/: env.py
alembic/versions/: a61bddec2e94_.py  da1d40d806a0_.py
miolingo/: __init__.py  main.py
miolingo/api/v1/: router.py
miolingo/backends/: authentication.py
miolingo/conf/: loggers.py  settings.py
miolingo/crud/: users.py
miolingo/db/: base.py  base_class.py  session.py
miolingo/managers/: users.py
miolingo/models/: __init__.py  core.py  users.py
miolingo/schemas/: users.py
miolingo/templates/mails/users/: request_verify.html  request_verify.txt  reset_password.html  reset_password.txt
miolingo/utils/: mails.py  urls.py
requirements/: dev.txt  prod.txt  test.txt
tests/: conftest.py
tests/factories/: base.py  users.py
tests/integrations/: conftest.py
tests/integrations/api/: test_users.py
tests/units/: test_mails.py  test_settings.py  test_setup.py
tests/units/api/: test_users.py
tests/units/factories/: test_users.py
tests/units/templates/mails/: dummy.html  dummy_alt.html  dummy_alt.txt
tests/utils/: __init__.py  client.py  mails.py  session.py
